PING notification subsystem over the dev path (T029, T030)
US2 / Phase B notify-before-retrieval, pure Scala + the crypto layer. 47 tests green.

- T029 notify codec (protocol-core/notify): NotificationToken (one-hot bitPosition + aggregation
  label) serialize/deserialize + immutable fixed-size Digest bit-vector (set/get/or/carrier).
  Cross-compiled structure only; sealing stays JVM-side.
- T030 DevNotificationServer (server/ping, depends on crypto): receiver seals a token under the
  server key (AEAD); sender's signal flips ONLY its encoded bit; aggregation ORs by label;
  digest() returns an all-zero carrier when no mail (uniformity, FR-012). Forged/tampered blobs
  rejected by AEAD auth (anti-flood/impersonation, FR-003). Labeled DEV, NO METADATA PRIVACY;
  real oblivious sort/scan/compaction deferred to the enclave sidecar (T053).

build.sbt: server now depends on crypto; server tests fork with --enable-native-access.